--- a/resources/assets/scss/core/_module.scss
+++ b/resources/assets/scss/core/_module.scss
@@ -124,6 +124,10 @@
         left: 0;
         opacity: 0;
         visibility: hidden;
+
+        >.inner {
+            padding: 0 $gutter;
+        }
     }
 }
 
