--- a/resources/assets/scss/pages/visualise/_visualise.scss
+++ b/resources/assets/scss/pages/visualise/_visualise.scss
@@ -1,231 +1,287 @@
 .categories {
-	width: 890px;
-	margin-left: -222px;
-	display:flex;
-	justify-content: space-between;
-	margin-bottom: 60px;
+    width: 890px;
+    margin-left: -222px;
+    display:flex;
+    justify-content: space-between;
+    margin-bottom: 60px;
 
-	.category {
-		width: 286px;
-		padding: 50px 25px 25px 25px;
-		border: 2px solid transparent;
-		border-image: linear-gradient(23deg, rgba($fontColour,.3) 0%, rgba($fontColour,0) 90%);
-		border-image-slice: 1;
-		color: $fontColour;
-		i {
-			height: 45px;
-			//display:block;
-			display: inline-block;
-			margin-bottom: 10px;
-			svg {
-				//width: 100%;
-				height: 100%;
-				path {
-					fill: $lightRed;
-				}
-			}
-		}
-		h3 {
-			font-weight:bold;
-			font-size: 25px;
-			margin-bottom: 22px;
-		}
-		p {
-			font-size: 14px;
-		}
+    @include breakpoint($brk-large) {
+        display: block;
+        margin: 0 auto;
+        width: 100%;
+    }
 
-	}
+    .category {
+        width: 286px;
+        padding: 50px 25px 25px 25px;
+        border: 2px solid transparent;
+        border-image: linear-gradient(23deg, rgba($fontColour,.3) 0%, rgba($fontColour,0) 90%);
+        border-image-slice: 1;
+        color: $fontColour;
+
+        @include breakpoint($brk-large) {
+            margin: 20px auto;
+        }
+
+        @include breakpoint($brk-small) {
+            width: 100%;
+        }
+
+        i {
+            height: 45px;
+            //display:block;
+            display: inline-block;
+            margin-bottom: 10px;
+            svg {
+                //width: 100%;
+                height: 100%;
+                path {
+                    fill: $lightRed;
+                }
+            }
+        }
+        h3 {
+            font-weight:bold;
+            font-size: 25px;
+            margin-bottom: 22px;
+        }
+        p {
+            font-size: 14px;
+        }
+
+    }
 }
 
 .dreamboard {
-	h1.title {
-		&:after {
-			width: 37px;
-		}
-	}
-	.board {
-		margin-bottom: 60px;
-	}
-	.button {
-		position:relative;
-		z-index: 20;
-	}
+    h1.title {
+        &:after {
+            width: 37px;
+        }
+    }
+
+    .board {
+        margin-bottom: 60px;
+    }
+
+    .button {
+        position:relative;
+        z-index: 20;
+    }
 }
 
 .board {
-	.overlay {
-		position:absolute;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-		background: rgba(white, 0.95);
-		z-index: 10;
-		visibility: hidden;
-	}
-	.modal {
-		position:absolute;
-		top: 50%;
-		left: 50%;
-		transform: translate(-50%, -50%);
-		z-index: 11;
-		width: 441px;
-		height: 330px;
-		padding: 30px 20px 20px 20px;
-		border: 2px solid transparent;
-		border-image: linear-gradient(23deg, rgba($fontColour,.5) 0%, rgba($fontColour,0) 90%);
-		border-image-slice: 1;
-		color: $fontColour;
-		visibility: hidden;
-		p {
-			line-height: 26px;
-			text-align: center;
-		}
-		.close {
-			width: 38px;
-			height: 38px;
-			position:absolute;
-			top: 0;
-			right: 0;
-			background-color:$lightRed;
-			padding: 12px;
-			cursor:pointer;
-			svg {
-				width: 100%;
-				height: 100%;
-				path {
-					fill: white;
-				}
-			}
-		}
-	}
 
-	.row-4, .mid-row {
-		padding: 20px 0;
-	}
-	.row-4 {
-		width: 862px;
-		display:flex;
-		justify-content: space-between;
-		margin: 0 auto;
-	}
-	.mid-row {
-		display:flex;
-		justify-content: space-between;
-		width: 1085px;
-		.column {
-			display:flex;
-			width: 423px;
-			justify-content: space-between;
+    .overlay {
+        position:absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(white, 0.95);
+        z-index: 10;
+        visibility: hidden;
+    }
 
-		}
-	}
-	.image {
-		width: 195px;
-		height: 129px;
-		background: #e6e6e6;
-		box-shadow: 0 0 30px rgba($fontColour, 0.05);
-		display:flex;
-		justify-content: center;
-		align-items: center;
-		position:relative;
-		overflow:hidden;
-		cursor:pointer;
-		input {
-			position: absolute;
-			top: 0;
-			left: 0;
-			font-size: 999px;
-			opacity: 0;
-			cursor:pointer;
+    .modal {
+        position:absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 11;
+        width: 441px;
+        height: 330px;
+        padding: 30px 20px 20px 20px;
+        border: 2px solid transparent;
+        border-image: linear-gradient(23deg, rgba($fontColour,.5) 0%, rgba($fontColour,0) 90%);
+        border-image-slice: 1;
+        color: $fontColour;
+        visibility: hidden;
 
-		}
+        p {
+            line-height: 26px;
+            text-align: center;
+        }
 
-		&.image_main {
-			transform-origin: 50% 50%;
-			transform: scale(1.3,1.3);
-			position:relative;
-			z-index: 2;
-		}
+        .close {
+            width: 38px;
+            height: 38px;
+            position:absolute;
+            top: 0;
+            right: 0;
+            background-color:$lightRed;
+            padding: 12px;
+            cursor:pointer;
+            svg {
+                width: 100%;
+                height: 100%;
+                path {
+                    fill: white;
+                }
+            }
+        }
+    }
 
-		img {
-			width: 100%;
-			height: 100%;
-			display:none;
-		}
-		&.has-image {
-			img {
-				display:block;
-			}
-			.camera-icon {
-				display:none;
-			}
-		}
+    .row-4, .mid-row {
+        padding: 20px 0;
 
-		.camera-icon {
-			width: 62px;
-			height: 62px;
-			border-radius: 50%;
-			background: $lightRed;
-			padding: 17px;
-			svg {
-				width: 100%;
-				height: 100%;
-				path {
-					fill: white;
-				}
-			}
-		}
-		.loader {
-			display:none;
-			width: 62px;
-			height: 62px;
-			line-height: 62px;
-			text-align: center;
-			background: $lightRed;
-		}
-		&.is-loading {
-			.loader {
-				display:block;
-			}
-			.camera-icon {
-				display:none;
-			}
-		}
-	}
+        @include breakpoint($brk-xlarge) {
+            display: block;
+
+        }
+    }
+
+    .row-4 {
+        width: 862px;
+        display:flex;
+        justify-content: space-between;
+        margin: 0 auto;
+
+        // @include breakpoint($brk-xlarge) {
+        //     display: inline-flex;
+        //     width: auto;
+        // }
+    }
+
+    .mid-row {
+        display: flex;
+        justify-content: space-between;
+        width: 1085px;
+        .column {
+            display: flex;
+            width: 423px;
+            justify-content: space-between;
+
+            @include breakpoint($brk-xlarge) {
+                display: block;
+                width: auto;
+            }
+
+        }
+    }
+
+    .image {
+        width: 195px;
+        height: 129px;
+        background: #e6e6e6;
+        box-shadow: 0 0 30px rgba($fontColour, 0.05);
+        display:flex;
+        justify-content: center;
+        align-items: center;
+        position:relative;
+        overflow:hidden;
+        cursor:pointer;
+
+        @include breakpoint($brk-xlarge) {
+            float: left;
+
+            &.image_5 {
+                float: left;
+            }
+            &.image_7 {
+                float: left;
+            }
+
+        }
+
+        input {
+            position: absolute;
+            top: 0;
+            left: 0;
+            font-size: 999px;
+            opacity: 0;
+            cursor:pointer;
+
+        }
+
+        &.image_main {
+            transform-origin: 50% 50%;
+            transform: scale(1.3, 1.3);
+            position: relative;
+            z-index: 2;
+
+            @include breakpoint($brk-xlarge) {
+                //transform: scale(1,1);
+            }
+        }
+
+        img {
+            width: 100%;
+            height: 100%;
+            display:none;
+        }
+        &.has-image {
+            img {
+                display:block;
+            }
+            .camera-icon {
+                display:none;
+            }
+        }
+
+        .camera-icon {
+            width: 62px;
+            height: 62px;
+            border-radius: 50%;
+            background: $lightRed;
+            padding: 17px;
+            svg {
+                width: 100%;
+                height: 100%;
+                path {
+                    fill: white;
+                }
+            }
+        }
+        .loader {
+            display:none;
+            width: 62px;
+            height: 62px;
+            line-height: 62px;
+            text-align: center;
+            background: $lightRed;
+        }
+        &.is-loading {
+            .loader {
+                display:block;
+            }
+            .camera-icon {
+                display:none;
+            }
+        }
+    }
 }
 
 .social {
-	position:relative;
-	z-index: 20;
-	text-align:center;
-	height: 17px;
-	line-height: 17px;
-	margin-top: 40px;
-	visibility: hidden;
-	a {
+    position:relative;
+    z-index: 20;
+    text-align:center;
+    height: 17px;
+    line-height: 17px;
+    margin-top: 40px;
+    visibility: hidden;
+    a {
 
-		display:inline-block;
-		font-size: 12px;
-		color: $fontColour;
-		text-decoration: none;
-		cursor:pointer;
-		margin: 0 10px;
-		vertical-align: top;
-		font-weight: normal;
-		&:hover {
-			color: $lightRed;
-			svg {
-				path {
-					fill: $lightRed;
-				}
-			}
-		}
-		svg {
-			height: 17px;
-			display:inline-block;
-			margin-right: 5px;
+        display:inline-block;
+        font-size: 12px;
+        color: $fontColour;
+        text-decoration: none;
+        cursor:pointer;
+        margin: 0 10px;
+        vertical-align: top;
+        font-weight: normal;
+        &:hover {
+            color: $lightRed;
+            svg {
+                path {
+                    fill: $lightRed;
+                }
+            }
+        }
+        svg {
+            height: 17px;
+            display:inline-block;
+            margin-right: 5px;
 
-		}
-	}
+        }
+    }
 }
