--- a/resources/assets/scss/core/_settings.scss
+++ b/resources/assets/scss/core/_settings.scss
@@ -31,7 +31,10 @@ $break-920 : 920px;
     // fake-email gets smaller.
 
 $brk-medium : 920px;
-    // poissitive affirmations stack.
+    // poisitive affirmations stack.
+
+$brk-1024 : 1024px;
+    // form error messages go underneith forms.
 
 $brk-large : 1120px;
     // visualise catergories stack.
