--- a/resources/assets/scss/ui/_buttons.scss
+++ b/resources/assets/scss/ui/_buttons.scss
@@ -6,7 +6,7 @@
     background: $lightRed;
     color: $white;
     font-weight: 600;
-    //display: inline-block;
+    display: inline-block;
     cursor: pointer;
     transition: background-color 0.2s ease;
 
