--- a/public/css/main.css
+++ b/public/css/main.css
@@ -426,7 +426,13 @@ textarea::-webkit-input-placeholder {
   transition: all 0.2s ease;
   transform: translateY(-50%);
 }
-/* line 117, ../../resources/assets/scss/core/_forms.scss */
+@media (max-width: 1024px) {
+  /* line 104, ../../resources/assets/scss/core/_forms.scss */
+  .form-row label {
+    top: 32%;
+  }
+}
+/* line 121, ../../resources/assets/scss/core/_forms.scss */
 .form-row input:focus ~ label,
 .form-row input.has-content ~ label {
   top: 10px;
@@ -434,7 +440,7 @@ textarea::-webkit-input-placeholder {
   right: inherit;
   transform: scale(0.85);
 }
-/* line 126, ../../resources/assets/scss/core/_forms.scss */
+/* line 130, ../../resources/assets/scss/core/_forms.scss */
 .form-row .error-container {
   position: absolute;
   left: 100%;
@@ -450,11 +456,23 @@ textarea::-webkit-input-placeholder {
   font-size: 15px;
   opacity: 0;
 }
-/* line 141, ../../resources/assets/scss/core/_forms.scss */
+@media (max-width: 1024px) {
+  /* line 130, ../../resources/assets/scss/core/_forms.scss */
+  .form-row .error-container {
+    position: relative;
+    left: 0;
+    bottom: 0;
+    top: 8px;
+    margin-left: 0;
+    text-align: center;
+    border-top: 0;
+  }
+}
+/* line 155, ../../resources/assets/scss/core/_forms.scss */
 .form-row .error-container li {
   display: block;
 }
-/* line 145, ../../resources/assets/scss/core/_forms.scss */
+/* line 159, ../../resources/assets/scss/core/_forms.scss */
 .form-row .error-container:after, .form-row .error-container:before {
   right: 100%;
   top: 50%;
@@ -465,33 +483,52 @@ textarea::-webkit-input-placeholder {
   position: absolute;
   pointer-events: none;
 }
-/* line 156, ../../resources/assets/scss/core/_forms.scss */
+@media (max-width: 1024px) {
+  /* line 159, ../../resources/assets/scss/core/_forms.scss */
+  .form-row .error-container:after, .form-row .error-container:before {
+    display: none;
+  }
+}
+/* line 174, ../../resources/assets/scss/core/_forms.scss */
 .form-row .error-container:after {
   border-color: rgba(255, 255, 255, 0);
   border-right-color: #ffffff;
   border-width: 9px;
   margin-top: -9px;
 }
-/* line 163, ../../resources/assets/scss/core/_forms.scss */
+/* line 181, ../../resources/assets/scss/core/_forms.scss */
 .form-row .error-container:before {
   border-color: rgba(174, 174, 174, 0);
   border-right-color: #aeaeae;
   border-width: 10px;
   margin-top: -10px;
 }
-/* line 175, ../../resources/assets/scss/core/_forms.scss */
+/* line 193, ../../resources/assets/scss/core/_forms.scss */
 .form-row .arrow_box:after {
   border-color: rgba(255, 255, 255, 0);
   border-right-color: #ffffff;
   border-width: 10px;
   margin-top: -10px;
 }
-/* line 181, ../../resources/assets/scss/core/_forms.scss */
+/* line 199, ../../resources/assets/scss/core/_forms.scss */
 .form-row .arrow_box:before {
   border-color: rgba(174, 174, 174, 0);
   border-right-color: #aeaeae;
   border-width: 11px;
   margin-top: -11px;
+}
+
+/* line 208, ../../resources/assets/scss/core/_forms.scss */
+.error-container {
+  border: 1px solid #aeaeae;
+  color: #aeaeae;
+  padding: 10px;
+  font-size: 15px;
+  background: white;
+  white-space: nowrap;
+  line-height: 1;
+  text-align: center;
+  border-top: 0;
 }
 
 /* line 1, ../../resources/assets/scss/core/_links.scss */
@@ -530,19 +567,20 @@ p a:hover {
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 0 20px;
 }
-/* line 17, ../../resources/assets/scss/core/_module.scss */
+/* line 18, ../../resources/assets/scss/core/_module.scss */
 .module > .module-section.has-container {
   padding: 50px;
   z-index: 2;
 }
 @media (max-width: 620px) {
-  /* line 17, ../../resources/assets/scss/core/_module.scss */
+  /* line 18, ../../resources/assets/scss/core/_module.scss */
   .module > .module-section.has-container {
     padding: 0 !important;
   }
 }
-/* line 25, ../../resources/assets/scss/core/_module.scss */
+/* line 26, ../../resources/assets/scss/core/_module.scss */
 .module > .module-section.has-container > .inner {
   width: 100%;
   height: 100%;
@@ -552,15 +590,15 @@ p a:hover {
   overflow: hidden;
 }
 
-/* line 38, ../../resources/assets/scss/core/_module.scss */
+/* line 39, ../../resources/assets/scss/core/_module.scss */
 .has-text {
   padding: 50px;
 }
-/* line 42, ../../resources/assets/scss/core/_module.scss */
+/* line 43, ../../resources/assets/scss/core/_module.scss */
 .has-text.module-section > .inner {
   display: block;
 }
-/* line 48, ../../resources/assets/scss/core/_module.scss */
+/* line 49, ../../resources/assets/scss/core/_module.scss */
 .has-text > .inner .content {
   width: 445px;
   margin: 0 auto;
@@ -570,23 +608,23 @@ p a:hover {
   padding: 40px 0 60px 0;
 }
 @media (max-width: 500px) {
-  /* line 48, ../../resources/assets/scss/core/_module.scss */
+  /* line 49, ../../resources/assets/scss/core/_module.scss */
   .has-text > .inner .content {
     width: 100%;
     padding: 60px 20px 20px;
   }
 }
-/* line 62, ../../resources/assets/scss/core/_module.scss */
+/* line 63, ../../resources/assets/scss/core/_module.scss */
 .has-text .dots {
   margin-bottom: 60px;
   margin-top: 60px;
 }
-/* line 67, ../../resources/assets/scss/core/_module.scss */
+/* line 68, ../../resources/assets/scss/core/_module.scss */
 .has-text .actions {
   text-align: center;
 }
 
-/* line 72, ../../resources/assets/scss/core/_module.scss */
+/* line 73, ../../resources/assets/scss/core/_module.scss */
 .next-section {
   display: block;
   width: 50px;
@@ -601,36 +639,36 @@ p a:hover {
   border: 0;
   transform-origin: 50% 50%;
 }
-/* line 86, ../../resources/assets/scss/core/_module.scss */
+/* line 87, ../../resources/assets/scss/core/_module.scss */
 .next-section svg {
   width: 100%;
   height: 100%;
 }
-/* line 89, ../../resources/assets/scss/core/_module.scss */
+/* line 90, ../../resources/assets/scss/core/_module.scss */
 .next-section svg path {
   fill: white;
   transition: fill 0.3s ease;
 }
 
-/* line 98, ../../resources/assets/scss/core/_module.scss */
+/* line 99, ../../resources/assets/scss/core/_module.scss */
 .congrats-section h1 {
   margin-bottom: 40px;
   line-height: 28px;
   letter-spacing: 0.02em;
 }
-/* line 104, ../../resources/assets/scss/core/_module.scss */
+/* line 105, ../../resources/assets/scss/core/_module.scss */
 .congrats-section p {
   max-width: 442px;
   text-align: center;
   margin-bottom: 40px;
   line-height: 26px;
 }
-/* line 111, ../../resources/assets/scss/core/_module.scss */
+/* line 112, ../../resources/assets/scss/core/_module.scss */
 .congrats-section .actions {
   text-align: center;
   margin: 40px 0;
 }
-/* line 116, ../../resources/assets/scss/core/_module.scss */
+/* line 117, ../../resources/assets/scss/core/_module.scss */
 .congrats-section .congrats-container {
   width: 100%;
   height: 100%;
@@ -643,17 +681,17 @@ p a:hover {
   opacity: 0;
   visibility: hidden;
 }
-/* line 128, ../../resources/assets/scss/core/_module.scss */
+/* line 129, ../../resources/assets/scss/core/_module.scss */
 .congrats-section .congrats-container > .inner {
   padding: 0 20px;
 }
 
-/* line 134, ../../resources/assets/scss/core/_module.scss */
+/* line 135, ../../resources/assets/scss/core/_module.scss */
 .actions {
   text-align: center;
 }
 
-/* line 138, ../../resources/assets/scss/core/_module.scss */
+/* line 139, ../../resources/assets/scss/core/_module.scss */
 .down-arrow {
   border: 0;
   background: none;
@@ -663,17 +701,17 @@ p a:hover {
   display: inline-block;
   cursor: pointer;
 }
-/* line 147, ../../resources/assets/scss/core/_module.scss */
+/* line 148, ../../resources/assets/scss/core/_module.scss */
 .down-arrow svg {
   width: 100%;
   height: 100%;
 }
-/* line 150, ../../resources/assets/scss/core/_module.scss */
+/* line 151, ../../resources/assets/scss/core/_module.scss */
 .down-arrow svg path {
   fill: #f16060;
 }
 
-/* line 156, ../../resources/assets/scss/core/_module.scss */
+/* line 157, ../../resources/assets/scss/core/_module.scss */
 .indicator {
   position: fixed;
   top: 50%;
@@ -684,19 +722,19 @@ p a:hover {
   z-index: 99;
 }
 @media (max-width: 800px) {
-  /* line 156, ../../resources/assets/scss/core/_module.scss */
+  /* line 157, ../../resources/assets/scss/core/_module.scss */
   .indicator {
     width: 50px;
     height: 100px;
   }
 }
 @media (max-width: 500px) {
-  /* line 156, ../../resources/assets/scss/core/_module.scss */
+  /* line 157, ../../resources/assets/scss/core/_module.scss */
   .indicator {
     display: none;
   }
 }
-/* line 173, ../../resources/assets/scss/core/_module.scss */
+/* line 174, ../../resources/assets/scss/core/_module.scss */
 .indicator .module-icon {
   width: 50px !important;
   height: 50px;
@@ -704,16 +742,16 @@ p a:hover {
   padding: 8px;
   float: right;
 }
-/* line 184, ../../resources/assets/scss/core/_module.scss */
+/* line 185, ../../resources/assets/scss/core/_module.scss */
 .indicator .module-icon svg {
   width: 100%;
   height: 100%;
 }
-/* line 187, ../../resources/assets/scss/core/_module.scss */
+/* line 188, ../../resources/assets/scss/core/_module.scss */
 .indicator .module-icon svg path {
   fill: white;
 }
-/* line 193, ../../resources/assets/scss/core/_module.scss */
+/* line 194, ../../resources/assets/scss/core/_module.scss */
 .indicator .forum-icon {
   width: 110px;
   height: 50px;
@@ -729,36 +767,36 @@ p a:hover {
   background-color: rgba(255, 255, 255, 0.2);
 }
 @media (max-width: 800px) {
-  /* line 193, ../../resources/assets/scss/core/_module.scss */
+  /* line 194, ../../resources/assets/scss/core/_module.scss */
   .indicator .forum-icon {
     background-color: rgba(255, 255, 255, 0.9);
     width: 50px;
     border: none;
   }
 }
-/* line 214, ../../resources/assets/scss/core/_module.scss */
+/* line 215, ../../resources/assets/scss/core/_module.scss */
 .indicator .forum-icon svg {
   width: 25px;
   display: inline-block;
   vertical-align: middle;
   margin-right: 10px;
 }
-/* line 221, ../../resources/assets/scss/core/_module.scss */
+/* line 222, ../../resources/assets/scss/core/_module.scss */
 .indicator .forum-icon svg path {
   fill: #f16060;
 }
 @media (max-width: 800px) {
-  /* line 214, ../../resources/assets/scss/core/_module.scss */
+  /* line 215, ../../resources/assets/scss/core/_module.scss */
   .indicator .forum-icon svg {
     margin: 2px auto;
   }
 }
-/* line 229, ../../resources/assets/scss/core/_module.scss */
+/* line 230, ../../resources/assets/scss/core/_module.scss */
 .indicator .forum-icon span {
   line-height: 21px;
 }
 @media (max-width: 800px) {
-  /* line 229, ../../resources/assets/scss/core/_module.scss */
+  /* line 230, ../../resources/assets/scss/core/_module.scss */
   .indicator .forum-icon span {
     display: none;
   }
@@ -918,6 +956,7 @@ blockquote.dark {
   background: #f16060;
   color: #ffffff;
   font-weight: 600;
+  display: inline-block;
   cursor: pointer;
   transition: background-color 0.2s ease;
 }
@@ -1702,7 +1741,7 @@ div.jqcloud span.w1 {
 .limiting-beliefs {
   width: 695px;
   margin-left: -125px;
-  margin-bottom: 30px;
+  margin-bottom: 40px;
 }
 @media (max-width: 500px) {
   /* line 1, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
@@ -1717,7 +1756,7 @@ div.jqcloud span.w1 {
   justify-content: space-between;
   position: relative;
 }
-@media (max-width: 500px) {
+@media (max-width: 920px) {
   /* line 10, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
   .limiting-beliefs .beliefs {
     display: block;
@@ -1730,7 +1769,7 @@ div.jqcloud span.w1 {
   position: relative;
   display: block;
 }
-@media (max-width: 500px) {
+@media (max-width: 920px) {
   /* line 20, ../../resources/assets/scss/pages/un-stuck/_un-stuck.scss */
   .limiting-beliefs .belief {
     margin: 40px auto;
