--- a/resources/assets/scss/core/_base.scss
+++ b/resources/assets/scss/core/_base.scss
@@ -24,6 +24,11 @@ h1.plain {
     font-size: 25px;
     font-weight: bold;
     text-align:center;
+
+    @include breakpoint($brk-small) {
+        font-size: 22px;
+        line-height: 25px;
+    }
 }
 
 .dots {
@@ -42,11 +47,20 @@ h1.plain {
     height: 50px;
     line-height: 50px;
 
+    // @include breakpoint($brk-small) {
+    //     background-color: white;
+    //     width: 100%;
+    //     right: 0;
+    //     text-align: right;
+    //     padding: 0 20px;
+    //     z-index: 3;
+    // }
+
     a {
         color: $fontColour;
         text-decoration: none;
         font-weight: normal;
-        // display: inline-block;
+        //display: inline-block;
         position: relative;
 
         &.logout {
