--- a/resources/assets/scss/core/_forms.scss
+++ b/resources/assets/scss/core/_forms.scss
@@ -93,8 +93,33 @@ textarea {
     margin: 32px auto 0 auto;
     font-size: 20px;
     max-width: 100%;
+    background: $lightRed;
+    border: 2px solid $lightRed;
     @include input-placeholder {
         color: rgba(white, 0.8);
+    }
+
+    &:focus {
+        background: rgba($white, 0.8);
+        color: $lightRed;
+
+        @include input-placeholder() {
+            color: $lightRed;
+        }
+    }
+
+    &:hover {
+        background: rgba($white, 0.8);
+        color: $lightRed;
+
+        @include input-placeholder() {
+            color: $lightRed;
+        }
+    }
+
+    @include input-placeholder() {
+        color: $white;
+        opacity: 0.9;
     }
 }
 
@@ -128,7 +153,7 @@ textarea {
     }
 
     .error-container {
-        position:absolute;
+        position: absolute;
         left: 100%;
         top: 50%;
         transform: translateY(-50%);
@@ -214,4 +239,15 @@ textarea {
     line-height: 1;
     text-align: center;
     border-top: 0;
+    background-color: rgba($white, 0.8);
 }
+
+textarea +.error-container {
+
+    @include breakpoint($brk-1024) {
+        border: 2px solid $white !important;
+        border-top: 0 !important;
+        top: 18px !important;
+    }
+}
+
