--- a/resources/assets/scss/core/_module.scss
+++ b/resources/assets/scss/core/_module.scss
@@ -1,18 +1,23 @@
 .module {
     > .module-section {
+        position: fixed;
         top: 0;
         left: 0;
-        position:fixed;
         width: 100%;
         height: 100%;
         visibility: hidden;
         min-width: 320px;
 
         > .inner {
-            display:flex;
+            display: flex;
             align-items: center;
             justify-content: center;
-            padding: 0 20px;
+            padding: 0 $gutter;
+
+            @include breakpoint($brk-small) {
+                padding: 40px $gutter;
+                align-items: inherit;
+            }
         }
 
         &.has-container {
@@ -24,16 +29,15 @@
             }
 
             > .inner {
+                position: relative;
                 width: 100%;
                 height: 100%;
                 background: rgba(255,255,255,0.90);
-                position:relative;
                 visibility: hidden;
-                overflow:hidden;
+                overflow: hidden;
             }
         }
     }
-
 }
 
 .has-text {
@@ -53,16 +57,21 @@
             line-height: 26px;
             color: $fontColour;
             padding: 40px 0 60px 0;
+
             @include breakpoint($brk-small) {
                 width: 100%;
-                padding: 60px $gutter $gutter;
+                padding-top: 60px;
+                //padding: 60px $gutter $gutter; maybe this should be there, not sure need to check. There is a 20px padding on the inner. (line 15)
             }
         }
     }
 
     .dots {
-        margin-bottom: 60px;
-        margin-top: 60px;
+        margin: 60px auto;
+
+        @include breakpoint($brk-small) {
+            margin: 40px auto;
+        }
     }
 
     .actions {
@@ -100,10 +109,12 @@
         margin-bottom: 40px;
         line-height: 28px;
         letter-spacing: 0.02em;
+        max-width: 442px;
     }
 
     p {
         max-width: 442px;
+        width: 100%;
         text-align: center;
         margin-bottom: 40px;
         line-height: 26px;
@@ -163,11 +174,12 @@
     width: 160px;
     z-index: 99;
 
-    @include breakpoint($break-800) {
+    @include breakpoint($brk-large) {
         width: 50px;
         height: 100px;
     }
-    @include breakpoint($brk-small) {
+
+    @include breakpoint($break-620) {
         display: none;
     }
 
@@ -177,10 +189,6 @@
         background: $lightRed;
         padding: 8px;
         float: right;
-
-        @include breakpoint($break-800) {
-
-        }
 
         svg {
             width: 100%;
@@ -205,11 +213,18 @@
         float: left;
         background-color: rgba(255, 255, 255, 0.2);
 
-        @include breakpoint($break-800) {
+        @include breakpoint($brk-large) {
             background-color: rgba(255, 255, 255, 0.9);
             width: 50px;
             border: none;
+        }
 
+        &:hover {
+            svg {
+                path {
+                    fill: rgba($lightRed, 0.6);
+                }
+            }
         }
 
         svg {
@@ -221,7 +236,10 @@
 
             path {
                 fill: $lightRed;
+                stroke: $lightRed;
+                @include transition(fill $transition);
             }
+
             @include breakpoint($break-800) {
                 margin: 2px auto;
             }
@@ -230,7 +248,7 @@
         span {
             line-height: 21px;
 
-            @include breakpoint($break-800) {
+            @include breakpoint($brk-large) {
                 display: none;
             }
         }
