--- a/resources/assets/scss/pages/home/_home.scss
+++ b/resources/assets/scss/pages/home/_home.scss
@@ -24,6 +24,9 @@
         z-index: 20;
         width: 700px;
 
+        @include breakpoint($break-620) {
+            width: 120%;
+        }
     }
 }
 
