--- a/resources/assets/scss/ui/_buttons.scss
+++ b/resources/assets/scss/ui/_buttons.scss
@@ -9,6 +9,7 @@
     display: inline-block;
     cursor: pointer;
     transition: background-color 0.2s ease;
+    font-size: 17px;
 
     &:hover {
         background-color: mix($lightRed, black, 90%);
