--- a/resources/assets/scss/core/_settings.scss
+++ b/resources/assets/scss/core/_settings.scss
@@ -4,6 +4,7 @@ $darkRed: #98201a;
 $hoverRed : #d95656;
 $fontColour: #252e33;
 $grey: #e6e6e6;
+$darkGrey : #c5c5c5;
 $hoverGrey: #d6d6d6;
 $white: #ffffff;
 $black: #252E33;
@@ -26,6 +27,7 @@ $break-620 : 620px;
     // question-nav moves to left and side
     // main logo turns responsive
     // auth login background turns white
+    // dashboard titles go to centered
 
 $brk-small : 500px;
     // content has text width 100%
