--- a/resources/assets/scss/main.scss
+++ b/resources/assets/scss/main.scss
@@ -32,5 +32,8 @@
 @import "pages/gratitude/gratitude";
 @import "pages/sustainable-change/sustainable-change";
 
+// dashboard
+@import "dashboard/dashboard";
 
+// forum
 @import "forum/forum";
