--- a/resources/assets/scss/pages/un-stuck/_un-stuck.scss
+++ b/resources/assets/scss/pages/un-stuck/_un-stuck.scss
@@ -47,6 +47,8 @@
             svg {
                 width: 100%;
                 height: 100%;
+                background-color: rgba(255, 255, 255, 0.6);
+                border-radius: 50%;
                 path {
                     fill: $lightRed;
                 }
