dashboard mobile styles

--- a/resources/assets/scss/core/_settings.scss
+++ b/resources/assets/scss/core/_settings.scss
@@ -29,6 +29,9 @@ $break-620 : 620px;
     // auth login background turns white
     // dashboard titles go to centered
 
+$brk-xsmall : 400px;
+    // dropdown arrow on dashboard changes.
+
 $brk-small : 500px;
     // content has text width 100%
 
