--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1556,6 +1556,89 @@ blockquote.dark {
   transform: translateY(500%);
 }
 
+/* line 3, ../../resources/assets/scss/pages/about/_about.scss */
+.text-welcome form .actions {
+  text-align: center;
+  margin-top: 45px;
+}
+
+/* line 12, ../../resources/assets/scss/pages/about/_about.scss */
+ul.accordion li {
+  margin: 30px 0;
+  position: relative;
+}
+/* line 16, ../../resources/assets/scss/pages/about/_about.scss */
+ul.accordion li:after {
+  width: 69px;
+  border-bottom: 1px solid #d4d4d4;
+  content: "";
+  display: block;
+  margin: 22px auto 0 auto;
+}
+/* line 25, ../../resources/assets/scss/pages/about/_about.scss */
+ul.accordion li .answer {
+  text-align: center;
+  padding: 10px 0;
+}
+/* line 33, ../../resources/assets/scss/pages/about/_about.scss */
+ul.accordion li.is-open .toggle svg.collapse {
+  transform: translateY(0px);
+}
+/* line 36, ../../resources/assets/scss/pages/about/_about.scss */
+ul.accordion li.is-open .toggle svg.expand {
+  transform: translateY(50px);
+}
+/* line 40, ../../resources/assets/scss/pages/about/_about.scss */
+ul.accordion li.is-open .answer {
+  display: block;
+}
+/* line 45, ../../resources/assets/scss/pages/about/_about.scss */
+ul.accordion .answer {
+  display: none;
+}
+/* line 49, ../../resources/assets/scss/pages/about/_about.scss */
+ul.accordion h2 {
+  text-align: center;
+  font-weight: bold;
+  font-size: 25px;
+  margin-bottom: 10px;
+}
+/* line 54, ../../resources/assets/scss/pages/about/_about.scss */
+ul.accordion h2 .toggle {
+  width: 30px;
+  height: 30px;
+  overflow: hidden;
+  margin: 0 auto;
+  position: relative;
+  margin-top: 20px;
+  cursor: pointer;
+  -moz-user-select: -moz-none;
+  -ms-user-select: none;
+  -webkit-user-select: none;
+  user-select: none;
+}
+/* line 64, ../../resources/assets/scss/pages/about/_about.scss */
+ul.accordion h2 .toggle svg {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+/* line 71, ../../resources/assets/scss/pages/about/_about.scss */
+ul.accordion h2 .toggle svg.collapse {
+  transform: translateY(-50px);
+}
+/* line 75, ../../resources/assets/scss/pages/about/_about.scss */
+ul.accordion h2 .toggle svg path {
+  fill: #f16060;
+}
+
+/* line 85, ../../resources/assets/scss/pages/about/_about.scss */
+.welcome-first-steps {
+  margin-top: 70px;
+}
+
 /* line 3, ../../resources/assets/scss/pages/welcome/_welcome.scss */
 .text-welcome form .actions {
   text-align: center;
@@ -2737,9 +2820,10 @@ form.letter textarea {
   .header h2 {
     font-size: 12px;
     text-align: left;
+    padding: 7px 10px;
   }
 }
-/* line 85, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 86, ../../resources/assets/scss/dashboard/_dashboard.scss */
 .header h2:before {
   position: relative;
   font-family: "icomoon";
@@ -2749,26 +2833,26 @@ form.letter textarea {
   font-size: 24px;
 }
 
-/* line 96, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 97, ../../resources/assets/scss/dashboard/_dashboard.scss */
 ul.actions {
   float: right;
 }
-/* line 99, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 100, ../../resources/assets/scss/dashboard/_dashboard.scss */
 ul.actions li {
   display: inline-block;
 }
 @media (max-width: 620px) {
-  /* line 99, ../../resources/assets/scss/dashboard/_dashboard.scss */
+  /* line 100, ../../resources/assets/scss/dashboard/_dashboard.scss */
   ul.actions li {
     display: block;
   }
 }
-/* line 106, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 107, ../../resources/assets/scss/dashboard/_dashboard.scss */
 ul.actions li.arrow {
   padding: 8.5px 15px;
   border-left: 1px solid #F89594;
 }
-/* line 110, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 111, ../../resources/assets/scss/dashboard/_dashboard.scss */
 ul.actions li.arrow:after {
   position: relative;
   font-family: "icomoon";
@@ -2776,18 +2860,18 @@ ul.actions li.arrow:after {
   top: 3px;
   font-size: 16px;
 }
-/* line 119, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 120, ../../resources/assets/scss/dashboard/_dashboard.scss */
 ul.actions li.forum {
   padding: 8.5px 10px;
 }
 @media (max-width: 620px) {
-  /* line 119, ../../resources/assets/scss/dashboard/_dashboard.scss */
+  /* line 120, ../../resources/assets/scss/dashboard/_dashboard.scss */
   ul.actions li.forum {
     border-left: 1px solid #F89594;
     border-bottom: 1px solid #F89594;
   }
 }
-/* line 127, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 128, ../../resources/assets/scss/dashboard/_dashboard.scss */
 ul.actions li.forum a.forum-icon {
   font-size: 14px;
   color: white;
@@ -2795,7 +2879,7 @@ ul.actions li.forum a.forum-icon {
   text-transform: initial;
   position: relative;
 }
-/* line 134, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 135, ../../resources/assets/scss/dashboard/_dashboard.scss */
 ul.actions li.forum a.forum-icon:before {
   position: absolute;
   font-family: "icomoon";
@@ -2805,45 +2889,45 @@ ul.actions li.forum a.forum-icon:before {
   left: -28px;
 }
 @media (max-width: 620px) {
-  /* line 134, ../../resources/assets/scss/dashboard/_dashboard.scss */
+  /* line 135, ../../resources/assets/scss/dashboard/_dashboard.scss */
   ul.actions li.forum a.forum-icon:before {
     position: relative;
     top: 2px;
     left: 0;
   }
 }
-/* line 149, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 150, ../../resources/assets/scss/dashboard/_dashboard.scss */
 ul.actions li.forum a.forum-icon span {
   line-height: 21px;
 }
 @media (max-width: 620px) {
-  /* line 149, ../../resources/assets/scss/dashboard/_dashboard.scss */
+  /* line 150, ../../resources/assets/scss/dashboard/_dashboard.scss */
   ul.actions li.forum a.forum-icon span {
     display: none;
   }
 }
-/* line 159, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 160, ../../resources/assets/scss/dashboard/_dashboard.scss */
 ul.actions li.unlock-countdown {
   font-size: 14px;
   text-transform: initial;
   font-weight: 500;
   position: relative;
 }
-/* line 165, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 166, ../../resources/assets/scss/dashboard/_dashboard.scss */
 ul.actions li.unlock-countdown > .inner {
   height: 100%;
 }
 @media (max-width: 620px) {
-  /* line 165, ../../resources/assets/scss/dashboard/_dashboard.scss */
+  /* line 166, ../../resources/assets/scss/dashboard/_dashboard.scss */
   ul.actions li.unlock-countdown > .inner {
     display: none;
   }
 }
-/* line 174, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 175, ../../resources/assets/scss/dashboard/_dashboard.scss */
 ul.actions li.unlock-countdown.unlocked:before {
   content: "\e622";
 }
-/* line 179, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 180, ../../resources/assets/scss/dashboard/_dashboard.scss */
 ul.actions li.unlock-countdown:before {
   position: absolute;
   font-family: "icomoon";
@@ -2853,21 +2937,21 @@ ul.actions li.unlock-countdown:before {
   font-size: 16px;
 }
 @media (max-width: 620px) {
-  /* line 179, ../../resources/assets/scss/dashboard/_dashboard.scss */
+  /* line 180, ../../resources/assets/scss/dashboard/_dashboard.scss */
   ul.actions li.unlock-countdown:before {
     top: 10px !important;
     left: -26px !important;
   }
 }
 
-/* line 198, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 199, ../../resources/assets/scss/dashboard/_dashboard.scss */
 .tagcloud {
   height: 200px;
   background-color: whitesmoke;
   margin-bottom: 30px;
 }
 
-/* line 204, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 205, ../../resources/assets/scss/dashboard/_dashboard.scss */
 .small-dashboard {
   font-size: 14px;
   font-weight: 500;
@@ -2875,85 +2959,91 @@ ul.actions li.unlock-countdown:before {
   text-transform: initial;
   border: 0;
 }
-/* line 211, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 212, ../../resources/assets/scss/dashboard/_dashboard.scss */
 .small-dashboard:hover {
   border: 0;
 }
 
-/* line 217, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 218, ../../resources/assets/scss/dashboard/_dashboard.scss */
 .module-boomerang h2:before {
   content: "\e601";
 }
 
-/* line 223, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 224, ../../resources/assets/scss/dashboard/_dashboard.scss */
 .module-un-stuck h2:before {
   content: "\e602";
 }
 
-/* line 229, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 230, ../../resources/assets/scss/dashboard/_dashboard.scss */
 .module-visualise h2:before {
   content: "\e603";
 }
 
-/* line 235, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 236, ../../resources/assets/scss/dashboard/_dashboard.scss */
 .module-fear-courage h2:before {
   content: "\e604";
 }
 
-/* line 241, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 242, ../../resources/assets/scss/dashboard/_dashboard.scss */
 .module-giving h2:before {
   content: "\e605";
 }
 
-/* line 247, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 248, ../../resources/assets/scss/dashboard/_dashboard.scss */
 .module-gratitude h2:before {
   content: "\e606";
 }
 
-/* line 253, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 254, ../../resources/assets/scss/dashboard/_dashboard.scss */
 .module-sustainable-change h2:before {
   content: "\e607";
 }
 
-/* line 259, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 260, ../../resources/assets/scss/dashboard/_dashboard.scss */
 .module-you-to-you h2:before {
   content: "\e608";
 }
 
-/* line 265, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 266, ../../resources/assets/scss/dashboard/_dashboard.scss */
 ul.module-list .content {
   max-width: 920px;
 }
-/* line 273, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 274, ../../resources/assets/scss/dashboard/_dashboard.scss */
 ul.module-list li.is-complete .header.locked {
   background-color: transparent;
 }
-/* line 278, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 279, ../../resources/assets/scss/dashboard/_dashboard.scss */
 ul.module-list li.is-complete .actions li.arrow {
   border-left: 1px solid #F89594 !important;
 }
-/* line 284, ../../resources/assets/scss/dashboard/_dashboard.scss */
+@media (max-width: 400px) {
+  /* line 278, ../../resources/assets/scss/dashboard/_dashboard.scss */
+  ul.module-list li.is-complete .actions {
+    float: none;
+  }
+}
+/* line 289, ../../resources/assets/scss/dashboard/_dashboard.scss */
 ul.module-list li.is-unlocked {
   border-top: 1px solid #e6e6e6;
 }
-/* line 288, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 293, ../../resources/assets/scss/dashboard/_dashboard.scss */
 ul.module-list li.is-unlocked .actions li.arrow {
   border-left: 1px solid #e6e6e6;
 }
-/* line 294, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 299, ../../resources/assets/scss/dashboard/_dashboard.scss */
 ul.module-list li.is-locked {
   border-top: 1px solid #e6e6e6;
 }
-/* line 297, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 302, ../../resources/assets/scss/dashboard/_dashboard.scss */
 ul.module-list li.is-locked .header {
   background-color: transparent;
   color: #c5c5c5;
 }
-/* line 302, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 307, ../../resources/assets/scss/dashboard/_dashboard.scss */
 ul.module-list li.is-locked:last-child {
   border-bottom: 1px solid #e6e6e6;
 }
-/* line 312, ../../resources/assets/scss/dashboard/_dashboard.scss */
+/* line 317, ../../resources/assets/scss/dashboard/_dashboard.scss */
 ul.module-list li.is-locked .actions li.arrow {
   border-left: 1px solid #e6e6e6;
 }
