Added about page

--- a/resources/assets/scss/main.scss
+++ b/resources/assets/scss/main.scss
@@ -24,6 +24,7 @@
 
 // pages
 @import "pages/home/home";
+@import "pages/about/about";
 @import "pages/welcome/welcome";
 @import "pages/boomerang/boomerang";
 @import "pages/un-stuck/un-stuck";
